objects/vlocity_cmt__VlocityState__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__DTPStateModelName__c</fullName>
        <description>Workaround to support import/export of Vlocity Actions that are associated with state model.</description>
        <label>DTP State Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NoDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NoUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateModelId__c</fullName>
        <label>Vlocity State Model</label>
        <referenceTo>vlocity_cmt__VlocityStateModel__c</referenceTo>
        <relationshipLabel>Vlocity State</relationshipLabel>
        <relationshipName>Vlocity_State</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateRecordType__c</fullName>
        <label>State Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Vlocity State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>